--- a/ProniaAgain/Areas/Admin/Views/Slider/Index.cshtml
+++ b/ProniaAgain/Areas/Admin/Views/Slider/Index.cshtml
@@ -34,9 +34,9 @@
                                         <td>@slider.Title</td>
                                         <td>@slider.Offer</td>
                                         <td>
-                                            <a class="btn btn-info" asp-action="Detail">Detail</a>
-                                            <a class="btn btn-warning" asp-action="Update">Update</a>
-                                            <a class="btn btn-danger" asp-action="Delete">Delete</a>
+                                            <a class="btn btn-info" asp-action="Detail" asp-route-id="@slider.Id">Detail</a>
+                                            <a class="btn btn-warning" asp-action="Update" asp-route-id="@slider.Id">Update</a>
+                                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@slider.Id">Delete</a>
                                         </td>
                                     </tr>
                                 }
