--- a/ProniaAgain/Areas/Admin/Views/Slider/Delete.cshtml
+++ b/ProniaAgain/Areas/Admin/Views/Slider/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @model Slider
 @{
-    ViewData["Title"] = "Create Slider";
+    ViewData["Title"] = "Delete Slider";
 }
 
 <div class="content-wrapper">
